# tool

./: .amateras  .classpath  .project  anotacoes.txt  db.Dockerfile  dbsetup.sql  docker-compose.yml  run.sh  tool.Dockerfile
WebContent/: cabecalho.jsp  cabecalho2.jsp  cabecalho_disciplinas.jsp  erros.jsp  (+3 more)
verification-tool/: .env  .gitignore  Cargo.toml  Dockerfile  README.md
verification-tool/contracts/: proxydiamond.sol  registry.sol
verification-tool/contracts/specs/: Refinement0102.sol  SimpleSpec02.sol
verification-tool/migrations/2023-07-07-161912_create_logs/: down.sql  up.sql
verification-tool/migrations/2023-07-07-162134_create_implementations/: down.sql  up.sql
verification-tool/migrations/2023-07-07-162436_create_relations/: down.sql  up.sql
verification-tool/src/: checker.rs  db.rs  main.rs  models.rs  old_main_j.rs  parser.rs  proxy.rs  schema.rs  util.rs
verification-tool/tests/: ERC721.sol  ERC721Evol.sol  ERC721EvolSpec.sol  ERC721Spec.sol  Reentrancy.sol  ReentrancyEvol.sol  ReentrancySpec.sol  Simple.sol  SimpleEvol.sol  SimpleSpec.sol  SimpleSpecEvol.sol
verification-tool/tests/0390d2_21_04_2016/: ERC20Evol.sol  ERC20EvolSpec.sol  Init.sol  Refinement_Badge.sol  Refinement_Token.sol
verification-tool/tests/0a9709_29_03_2016/: ERC20.sol  ERC20Spec.sol  Init.sol  Refinement.sol
verification-tool/tests/0xMonorepo/: ERC20Specification.sol
verification-tool/tests/0xMonorepo/deploy/: ERC20TokenHeritage0.sol  ERC20TokenHeritage1.sol  ERC20TokenHeritage2.sol
verification-tool/tests/0xMonorepo/evolution/: ERC20TokenHeritage2.sol
(+171 files in other folders)
