[package]
name = "tool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.67"
substring = "1.4.5"
tokio = "1.10.0"
dotenv="0.15.0"
diesel = { version = "2.1.0", features = ["postgres"] }
regex = "1.9.1"


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]


[dev-dependencies]
tokio-test = "*"
